# Docksmith

./: .gitignore  README.md  pyproject.toml
docksmith/: __init__.py  __main__.py  _term.py  builder.py  cache.py  cli.py  image.py  layer.py  parser.py  runtime.py  store.py
sample-app/: Docksmithfile  app.py  app.sh
scripts/: docksmith-sudo-wrapper  import-base-image.sh
tests/integration/: test_cache_invalidation.py  test_isolation.py
tests/reproducibility/: test_identical_builds.py  test_identical_builds.sh
tests/unit/: test_builder.py  test_cache.py  test_cli.py  test_image.py  test_layer.py  test_parser.py  test_runtime_env.py  test_store.py
